--- a/.gitignore
+++ b/.gitignore
@@ -150,7 +150,7 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
 .idea/Telerik_course_python.iml
 *.zip
 23_WS4_Unit_test/WS 4 Solution/.idea/vcs.xml
