--- a/logistic_fleet/.vscode/settings.json
+++ b/logistic_fleet/.vscode/settings.json
@@ -1,11 +1,10 @@
 {
-    "liveServer.settings.port": 5501,
     "python.testing.unittestArgs": [
         "-v",
         "-s",
-        "./logistic_fleet",
+        "./test",
         "-p",
-        "*test.py"
+        "*_test.py"
     ],
     "python.testing.pytestEnabled": false,
     "python.testing.unittestEnabled": true
