finishing weather app

--- a/TOOLS/.vscode/settings.json
+++ b/TOOLS/.vscode/settings.json
@@ -11,5 +11,6 @@
     "statusBar.background": "#12372A",
     "statusBar.border": "#12372A",
     "statusBar.foreground": "#FBFADA"
-  }
+  },
+  "liveServer.settings.port": 5501
 }
